Fix mudae on mobile? attempt 2

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
 :root {
   --text-width: 2vw;
+  color-scheme: only light;
 }
 
 @layer base {
